css/main.css
/* CSS for index.html */

body  {
  background-color: black;
  color: white;
  font-family: arial;
  text-align: center;
}

a, #new-timers-span {
  color: #fc37ff;
}


/* End timer */

.end_div {
  padding: 50px;
}

.end_timer {
  font-size: 125px;
  margin-top: -25px;
}

#end_subtitle {
  margin-top: -75px;
  color: gray;
  font-size: 25px;
}


/* School Day Timer */

.sday_div {
  padding-top: 0px;
  float: left;
  padding-left: 40px;
}

.sday_timer {
  color: white;
  font-size: 75px;
  margin-top: -20px;
}

#sday_subtitle {
  margin-top: -20px;
  color: gray;
  font-size: 15px;
}

/* Spring Break Timer */

.sbreak_div {
  padding-top: 0px;
  float: right;
  padding-right: 40px;
}

.sbreak_timer {
  color: green;
  font-size: 75px;
  margin-top: -20px;
}

#sbreak_subtitle {
  margin-top: -20px;
  color: gray;
  font-size: 15px;
}

#sbreak_hours, #sbreak_seconds {
  color: lime;
}

#sbreak_days, #sbreak_minutes {
  color: yellow;
}

/* links */

#links {
  position: absolute;
  top: 1;
  right: 0;
  margin-top: 275px;
  float: left;
  text-align: left;
  width: 100%;
  background-color: #494949;
}

